--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goit-js-hw-10-food-service",
   "version": "1.1.0",
-  "description": "",
+  "description": "## Скрытые файлы",
   "main": "index.js",
   "homepage": "https://goitacademy.github.io/goit-js-hw-10-food-service",
   "scripts": {
